syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.ds.service4";
option java_outer_classname = "Service4Impl";

package service4;

// Interface exported by the server.
service Service4 {
  
  rpc CustomizedPrice(stream EnquiryRequest) returns (stream EnquiryResponse) {}
    
}

message EnquiryRequest {
  string ProductNumber = 1;
  string CouponNumber = 2;
  string Delivery = 3; 
}

message EnquiryResponse {
    string ProductNumber = 1;
    int32 price = 2;
}
